Kaggle Notebook | MNIST_AutoEncoder | 92% accuracy

--- a/mnist-autoencoder.ipynb
+++ b/mnist-autoencoder.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f963c8ba",
+   "id": "c45c68d6",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-11-18T14:57:25.809919Z",
-     "iopub.status.busy": "2024-11-18T14:57:25.808579Z",
-     "iopub.status.idle": "2024-11-18T14:57:31.029876Z",
-     "shell.execute_reply": "2024-11-18T14:57:31.028611Z"
+     "iopub.execute_input": "2024-11-19T16:38:27.001218Z",
+     "iopub.status.busy": "2024-11-19T16:38:27.000077Z",
+     "iopub.status.idle": "2024-11-19T16:38:33.061502Z",
+     "shell.execute_reply": "2024-11-19T16:38:33.060358Z"
     },
     "papermill": {
-     "duration": 5.234214,
-     "end_time": "2024-11-18T14:57:31.032917",
+     "duration": 6.070188,
+     "end_time": "2024-11-19T16:38:33.063993",
      "exception": false,
-     "start_time": "2024-11-18T14:57:25.798703",
+     "start_time": "2024-11-19T16:38:26.993805",
      "status": "completed"
     },
     "tags": []
@@ -42,19 +42,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2af27286",
+   "id": "5832c360",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-18T14:57:31.048239Z",
-     "iopub.status.busy": "2024-11-18T14:57:31.047672Z",
-     "iopub.status.idle": "2024-11-18T14:57:36.294779Z",
-     "shell.execute_reply": "2024-11-18T14:57:36.293075Z"
+     "iopub.execute_input": "2024-11-19T16:38:33.073736Z",
+     "iopub.status.busy": "2024-11-19T16:38:33.073221Z",
+     "iopub.status.idle": "2024-11-19T16:38:35.690819Z",
+     "shell.execute_reply": "2024-11-19T16:38:35.689556Z"
     },
     "papermill": {
-     "duration": 5.257854,
-     "end_time": "2024-11-18T14:57:36.297782",
+     "duration": 2.625524,
+     "end_time": "2024-11-19T16:38:35.693748",
      "exception": false,
-     "start_time": "2024-11-18T14:57:31.039928",
+     "start_time": "2024-11-19T16:38:33.068224",
      "status": "completed"
     },
     "tags": []
@@ -76,7 +76,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9912422/9912422 [00:00<00:00, 15923247.71it/s]\n"
+      "100%|██████████| 9912422/9912422 [00:00<00:00, 53543965.50it/s]\n"
      ]
     },
     {
@@ -97,7 +97,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 28881/28881 [00:00<00:00, 472689.61it/s]\n"
+      "100%|██████████| 28881/28881 [00:00<00:00, 1531521.51it/s]"
      ]
     },
     {
@@ -106,7 +106,20 @@
      "text": [
       "Extracting mnist/MNIST/raw/train-labels-idx1-ubyte.gz to mnist/MNIST/raw\n",
       "\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Failed to download (trying next):\n",
       "HTTP Error 403: Forbidden\n",
       "\n",
@@ -118,7 +131,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1648877/1648877 [00:00<00:00, 3773461.82it/s]\n"
+      "100%|██████████| 1648877/1648877 [00:00<00:00, 13621762.46it/s]\n"
      ]
     },
     {
@@ -139,7 +152,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4542/4542 [00:00<00:00, 2242029.98it/s]"
+      "100%|██████████| 4542/4542 [00:00<00:00, 1515434.63it/s]"
      ]
     },
     {
@@ -163,6 +176,7 @@
     "    [\n",
     "        T.Resize((64, 64)),\n",
     "        T.ToTensor(),\n",
+    "        T.Normalize((0.5,), (0.5,))\n",
     "    ]\n",
     ")\n",
     "\n",
@@ -177,19 +191,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "10f41409",
+   "id": "7bcdc596",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-18T14:57:36.318079Z",
-     "iopub.status.busy": "2024-11-18T14:57:36.317624Z",
-     "iopub.status.idle": "2024-11-18T14:57:36.327744Z",
-     "shell.execute_reply": "2024-11-18T14:57:36.326596Z"
+     "iopub.execute_input": "2024-11-19T16:38:35.707103Z",
+     "iopub.status.busy": "2024-11-19T16:38:35.706697Z",
+     "iopub.status.idle": "2024-11-19T16:38:35.714549Z",
+     "shell.execute_reply": "2024-11-19T16:38:35.713452Z"
     },
     "papermill": {
-     "duration": 0.023265,
-     "end_time": "2024-11-18T14:57:36.330399",
+     "duration": 0.017548,
+     "end_time": "2024-11-19T16:38:35.716932",
      "exception": false,
-     "start_time": "2024-11-18T14:57:36.307134",
+     "start_time": "2024-11-19T16:38:35.699384",
      "status": "completed"
     },
     "tags": []
@@ -244,19 +258,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "70835af0",
+   "id": "ef24333c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-18T14:57:36.350612Z",
-     "iopub.status.busy": "2024-11-18T14:57:36.350114Z",
-     "iopub.status.idle": "2024-11-18T14:57:36.361842Z",
-     "shell.execute_reply": "2024-11-18T14:57:36.360614Z"
+     "iopub.execute_input": "2024-11-19T16:38:35.730243Z",
+     "iopub.status.busy": "2024-11-19T16:38:35.729751Z",
+     "iopub.status.idle": "2024-11-19T16:38:35.738667Z",
+     "shell.execute_reply": "2024-11-19T16:38:35.737361Z"
     },
     "papermill": {
-     "duration": 0.024723,
-     "end_time": "2024-11-18T14:57:36.364338",
+     "duration": 0.018299,
+     "end_time": "2024-11-19T16:38:35.740908",
      "exception": false,
-     "start_time": "2024-11-18T14:57:36.339615",
+     "start_time": "2024-11-19T16:38:35.722609",
      "status": "completed"
     },
     "tags": []
@@ -316,19 +330,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d00efe56",
+   "id": "911b659d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-18T14:57:36.384617Z",
-     "iopub.status.busy": "2024-11-18T14:57:36.384143Z",
-     "iopub.status.idle": "2024-11-18T14:57:36.403401Z",
-     "shell.execute_reply": "2024-11-18T14:57:36.402304Z"
+     "iopub.execute_input": "2024-11-19T16:38:35.753097Z",
+     "iopub.status.busy": "2024-11-19T16:38:35.752749Z",
+     "iopub.status.idle": "2024-11-19T16:38:35.768506Z",
+     "shell.execute_reply": "2024-11-19T16:38:35.767638Z"
     },
     "papermill": {
-     "duration": 0.032588,
-     "end_time": "2024-11-18T14:57:36.406103",
+     "duration": 0.024403,
+     "end_time": "2024-11-19T16:38:35.770643",
      "exception": false,
-     "start_time": "2024-11-18T14:57:36.373515",
+     "start_time": "2024-11-19T16:38:35.746240",
      "status": "completed"
     },
     "tags": []
@@ -440,19 +454,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c8bc8bd1",
+   "id": "63a4a196",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-18T14:57:36.426327Z",
-     "iopub.status.busy": "2024-11-18T14:57:36.425857Z",
-     "iopub.status.idle": "2024-11-18T14:57:36.433087Z",
-     "shell.execute_reply": "2024-11-18T14:57:36.431817Z"
+     "iopub.execute_input": "2024-11-19T16:38:35.783220Z",
+     "iopub.status.busy": "2024-11-19T16:38:35.782225Z",
+     "iopub.status.idle": "2024-11-19T16:38:35.788660Z",
+     "shell.execute_reply": "2024-11-19T16:38:35.787599Z"
     },
     "papermill": {
-     "duration": 0.020302,
-     "end_time": "2024-11-18T14:57:36.435461",
+     "duration": 0.015092,
+     "end_time": "2024-11-19T16:38:35.790971",
      "exception": false,
-     "start_time": "2024-11-18T14:57:36.415159",
+     "start_time": "2024-11-19T16:38:35.775879",
      "status": "completed"
     },
     "tags": []
@@ -478,19 +492,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c2ac1613",
+   "id": "ec0d757e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-18T14:57:36.456075Z",
-     "iopub.status.busy": "2024-11-18T14:57:36.455215Z",
-     "iopub.status.idle": "2024-11-18T14:57:36.467365Z",
-     "shell.execute_reply": "2024-11-18T14:57:36.465966Z"
+     "iopub.execute_input": "2024-11-19T16:38:35.803341Z",
+     "iopub.status.busy": "2024-11-19T16:38:35.802909Z",
+     "iopub.status.idle": "2024-11-19T16:38:35.812065Z",
+     "shell.execute_reply": "2024-11-19T16:38:35.810905Z"
     },
     "papermill": {
-     "duration": 0.025227,
-     "end_time": "2024-11-18T14:57:36.469968",
+     "duration": 0.017805,
+     "end_time": "2024-11-19T16:38:35.814129",
      "exception": false,
-     "start_time": "2024-11-18T14:57:36.444741",
+     "start_time": "2024-11-19T16:38:35.796324",
      "status": "completed"
     },
     "tags": []
@@ -533,46 +547,80 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1e4e675e",
+   "id": "58c27af1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-18T14:57:36.491358Z",
-     "iopub.status.busy": "2024-11-18T14:57:36.490928Z",
-     "iopub.status.idle": "2024-11-18T14:57:36.537408Z",
-     "shell.execute_reply": "2024-11-18T14:57:36.536363Z"
+     "iopub.execute_input": "2024-11-19T16:38:35.826548Z",
+     "iopub.status.busy": "2024-11-19T16:38:35.826174Z",
+     "iopub.status.idle": "2024-11-19T16:54:02.499954Z",
+     "shell.execute_reply": "2024-11-19T16:54:02.498378Z"
     },
     "papermill": {
-     "duration": 0.060681,
-     "end_time": "2024-11-18T14:57:36.540259",
+     "duration": 926.688466,
+     "end_time": "2024-11-19T16:54:02.508085",
      "exception": false,
-     "start_time": "2024-11-18T14:57:36.479578",
+     "start_time": "2024-11-19T16:38:35.819619",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [1/6], Loss: 0.8881\n",
+      "Epoch [2/6], Loss: 0.8290\n",
+      "Epoch [3/6], Loss: 0.8252\n",
+      "Epoch [4/6], Loss: 0.8234\n",
+      "Epoch [5/6], Loss: 0.8224\n",
+      "Epoch [6/6], Loss: 0.8216\n"
+     ]
+    }
+   ],
    "source": [
-    "de_model = DenoisingAutoEncoder(in_channels=1).to(device)\n",
+    "model = DenoisingAutoEncoder(\n",
+    "    in_channels=1,\n",
+    "    base_block=DenoisingBlock,  # Используем denoising-блок\n",
+    "    base_size=8,\n",
+    "    num_blocks=4  # Соответствует архитектуре\n",
+    ").to(device)\n",
     "\n",
-    "optimizer = Adam(de_model.parameters(), lr=1e-3)"
+    "criterion = nn.MSELoss()  # Или BCELoss, если требуется\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
+    "\n",
+    "epochs=6\n",
+    "\n",
+    "for epoch in range(epochs):\n",
+    "    model.train()\n",
+    "    total_loss = 0\n",
+    "    for images, _ in train_loader:\n",
+    "        images = images.to(device)\n",
+    "        optimizer.zero_grad()\n",
+    "        outputs = model(images)\n",
+    "        loss = criterion(outputs, images)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        total_loss += loss.item()\n",
+    "    print(f\"Epoch [{epoch + 1}/{epochs}], Loss: {total_loss / len(train_loader):.4f}\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6c77ae41",
+   "id": "f04a65b6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-18T14:57:36.560364Z",
-     "iopub.status.busy": "2024-11-18T14:57:36.559925Z",
-     "iopub.status.idle": "2024-11-18T14:57:36.569095Z",
-     "shell.execute_reply": "2024-11-18T14:57:36.567931Z"
+     "iopub.execute_input": "2024-11-19T16:54:02.521183Z",
+     "iopub.status.busy": "2024-11-19T16:54:02.520726Z",
+     "iopub.status.idle": "2024-11-19T16:54:02.529497Z",
+     "shell.execute_reply": "2024-11-19T16:54:02.528224Z"
     },
     "papermill": {
-     "duration": 0.022074,
-     "end_time": "2024-11-18T14:57:36.571568",
+     "duration": 0.018216,
+     "end_time": "2024-11-19T16:54:02.531744",
      "exception": false,
-     "start_time": "2024-11-18T14:57:36.549494",
+     "start_time": "2024-11-19T16:54:02.513528",
      "status": "completed"
     },
     "tags": []
@@ -608,44 +656,44 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f40f36a5",
+   "id": "f258a2fd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-18T14:57:36.591649Z",
-     "iopub.status.busy": "2024-11-18T14:57:36.591178Z",
-     "iopub.status.idle": "2024-11-18T14:57:37.413353Z",
-     "shell.execute_reply": "2024-11-18T14:57:37.411936Z"
+     "iopub.execute_input": "2024-11-19T16:54:02.545451Z",
+     "iopub.status.busy": "2024-11-19T16:54:02.545042Z",
+     "iopub.status.idle": "2024-11-19T16:54:03.003933Z",
+     "shell.execute_reply": "2024-11-19T16:54:03.002561Z"
     },
     "papermill": {
-     "duration": 0.835775,
-     "end_time": "2024-11-18T14:57:37.416524",
+     "duration": 0.469044,
+     "end_time": "2024-11-19T16:54:03.006483",
      "exception": false,
-     "start_time": "2024-11-18T14:57:36.580749",
+     "start_time": "2024-11-19T16:54:02.537439",
      "status": "completed"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "x_train, y_train = get_latent_labels(de_model, train_loader, 1000)"
+    "x_train, y_train = get_latent_labels(model, train_loader, 1000)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a3301f67",
+   "id": "c8f5a0dc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-18T14:57:37.437329Z",
-     "iopub.status.busy": "2024-11-18T14:57:37.436866Z",
-     "iopub.status.idle": "2024-11-18T14:57:45.791920Z",
-     "shell.execute_reply": "2024-11-18T14:57:45.790290Z"
+     "iopub.execute_input": "2024-11-19T16:54:03.020243Z",
+     "iopub.status.busy": "2024-11-19T16:54:03.019668Z",
+     "iopub.status.idle": "2024-11-19T16:54:08.627204Z",
+     "shell.execute_reply": "2024-11-19T16:54:08.625522Z"
     },
     "papermill": {
-     "duration": 8.368841,
-     "end_time": "2024-11-18T14:57:45.794759",
+     "duration": 5.617492,
+     "end_time": "2024-11-19T16:54:08.629785",
      "exception": false,
-     "start_time": "2024-11-18T14:57:37.425918",
+     "start_time": "2024-11-19T16:54:03.012293",
      "status": "completed"
     },
     "tags": []
@@ -656,25 +704,25 @@
     "\n",
     "clf = RandomForestClassifier().fit(x_train, y_train)\n",
     "\n",
-    "x_valid, y_valid = get_latent_labels(de_model, valid_loader, 10000)"
+    "x_valid, y_valid = get_latent_labels(model, valid_loader, 10000)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ee605d48",
+   "id": "223c963f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-18T14:57:45.816097Z",
-     "iopub.status.busy": "2024-11-18T14:57:45.815190Z",
-     "iopub.status.idle": "2024-11-18T14:57:46.006554Z",
-     "shell.execute_reply": "2024-11-18T14:57:46.005429Z"
+     "iopub.execute_input": "2024-11-19T16:54:08.643754Z",
+     "iopub.status.busy": "2024-11-19T16:54:08.642850Z",
+     "iopub.status.idle": "2024-11-19T16:54:08.826728Z",
+     "shell.execute_reply": "2024-11-19T16:54:08.825538Z"
     },
     "papermill": {
-     "duration": 0.205125,
-     "end_time": "2024-11-18T14:57:46.009232",
+     "duration": 0.193702,
+     "end_time": "2024-11-19T16:54:08.829191",
      "exception": false,
-     "start_time": "2024-11-18T14:57:45.804107",
+     "start_time": "2024-11-19T16:54:08.635489",
      "status": "completed"
     },
     "tags": []
@@ -683,7 +731,7 @@
     {
      "data": {
       "text/plain": [
-       "0.5279"
+       "0.9128"
       ]
      },
      "execution_count": 12,
@@ -698,19 +746,19 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "233edc85",
+   "id": "50c971d5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-18T14:57:46.029792Z",
-     "iopub.status.busy": "2024-11-18T14:57:46.028801Z",
-     "iopub.status.idle": "2024-11-18T14:57:46.036093Z",
-     "shell.execute_reply": "2024-11-18T14:57:46.034918Z"
+     "iopub.execute_input": "2024-11-19T16:54:08.842671Z",
+     "iopub.status.busy": "2024-11-19T16:54:08.842253Z",
+     "iopub.status.idle": "2024-11-19T16:54:08.848960Z",
+     "shell.execute_reply": "2024-11-19T16:54:08.847892Z"
     },
     "papermill": {
-     "duration": 0.020444,
-     "end_time": "2024-11-18T14:57:46.038811",
+     "duration": 0.016056,
+     "end_time": "2024-11-19T16:54:08.851211",
      "exception": false,
-     "start_time": "2024-11-18T14:57:46.018367",
+     "start_time": "2024-11-19T16:54:08.835155",
      "status": "completed"
     },
     "tags": []
@@ -737,14 +785,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "300dd7b1",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-11-19T16:54:08.864525Z",
+     "iopub.status.busy": "2024-11-19T16:54:08.864125Z",
+     "iopub.status.idle": "2024-11-19T16:54:08.948351Z",
+     "shell.execute_reply": "2024-11-19T16:54:08.947162Z"
+    },
+    "papermill": {
+     "duration": 0.09404,
+     "end_time": "2024-11-19T16:54:08.951087",
+     "exception": false,
+     "start_time": "2024-11-19T16:54:08.857047",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "save_embeddings(x_train, y_train, x_valid, y_valid)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "96d744e7",
+   "id": "592d5ff7",
    "metadata": {
     "papermill": {
-     "duration": 0.00896,
-     "end_time": "2024-11-18T14:57:46.057060",
+     "duration": 0.005733,
+     "end_time": "2024-11-19T16:54:08.962753",
      "exception": false,
-     "start_time": "2024-11-18T14:57:46.048100",
+     "start_time": "2024-11-19T16:54:08.957020",
      "status": "completed"
     },
     "tags": []
@@ -782,14 +855,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 24.739589,
-   "end_time": "2024-11-18T14:57:47.490917",
+   "duration": 947.34257,
+   "end_time": "2024-11-19T16:54:10.496071",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-11-18T14:57:22.751328",
+   "start_time": "2024-11-19T16:38:23.153501",
    "version": "2.6.0"
   }
  },
